<resources>
    <string name="app_name">Drive your licence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="login_username">Username</string>
    <string name="login_logo">Login logo</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error_empty_username">Username gol</string>
    <string name="login_empty_password">Campul pentru parola nu poate fi gol</string>
    <string name="login_invalid_username">User gresit</string>
    <string name="login_invalid_password">Parola incorecta</string>
    <string name="login_message_success">V-ati logat cu succes!</string>
    <string name="lv_row_icon_description">Icon</string>
    <string name="lv_empty_resource">-</string>
    <string name="menu_questions">Intrebari examen</string>
    <string name="questions_btn_sign">Semne</string>
    <string name="questions_btn_mechanics">Mecanica</string>
    <string name="questions_btn_tickets">Contraventii</string>
    <string name="form_students_menu">Despre</string>
    <string name="form_school_name">Nume scoala</string>
    <string name="ask_fab_description">Adauga o intrebare despre examen</string>
    <string name="ask_tv_category">Categorie</string>
    <string name="ask_button_send">Trimite</string>
    <string name="ask_ti_question">Precizati intrebarea</string>
    <string name="login_tv_without_account">Continua fara cont</string>


    <string name="login_user">stefan</string>
    <string name="login_pass">test123123</string>
    <string name="form_tv_category">Categorie</string>
    <string name="form_tv_theoretical_label">Data examen teoretic</string>
    <string name="form_tv_practical_label">Data examen practic</string>
    <string name="form_tv_practical">Apasa pentru alegere data</string>
    <string name="form_rb_male">Masculin</string>
    <string name="form_rb_female">Feminin</string>
    <string name="form_cb_school_started">Am inceput scoala</string>
    <string name="form_tv_sex">Sex:</string>
    <string name="ask_success_message">Ati trimis cu succes intrebarea</string>
    <string name="home_rating_below">Nota nu poate fi 0</string>
    <string name="home_cancel_button">Cancel</string>
    <string name="home_ratingPicker_message">Alegeti o nota pentru categoria selectata</string>
    <string name="home_button_ok">OK</string>
    <string name="home_ratingPicker_title">Alegeti nota</string>
    <string name="main_welcome_user">Bine ai venit, </string>
    <string name="main_nav_header_username_anonim">Anonim user</string>
    <string name="form_school_error">Denumirea scolii nu poate fi goala</string>
    <string name="form_tv_date_text">Apasa pentru adaugare</string>
    <string name="menu_quiz">Quiz</string>
    <string name="ask_etQuestion_error">Campul intrebare nu trebuie sa fie gol</string>
    <string name="login_tv_register">Inregistreaza-te</string>
    <string name="register_username_hint">Username sau email</string>
    <string name="register_tv_retype_password">Retype password</string>
    <string name="register_button_hint">Register</string>
    <string name="menu_delete">Delete account</string>
    <string name="register_confirm_message_empty">Password confirmation field is empty</string>
    <string name="register_pass_mismatch">Parolele nu corespund</string>
    <string name="login_user_not_found">User-ul nu exista</string>
    <string name="menu_faq">FAQ</string>
    <string name="ask_new_question_message">Intrebare adaugata</string>
    <string name="faq_btn_save">Salveaza datele</string>
    <string name="faq_tv_rating_app_label">Rating-ul minim al aplicatie/categorie</string>
    <string name="faq_tv_average_rating_label">Media rating-ului aplicatiei este de</string>
    <string name="faq_header_text_file">Raportarea facuta pe baza intrebarilor frecvente</string>
    <string name="faq_category_header_text_file">Aplicatia a primit rating-ul mediu la intrebarea cu categoria:</string>
    <string name="faq_file_saved_to">Saved to</string>
    <string name="faq_questions_header_text_file">Intrebarile puse de user-ul curent</string>

    <string-array name="quiz_questions_categories">
        <item>Mecanica</item>
        <item>Semne rutiere</item>
        <item>Contraventii</item>
        <item>alta categorie(...)</item>
    </string-array>

    <string-array name="form_licence_options">
        <item>categoria A</item>
        <item>categoria B</item>
        <item>categoria C</item>
        <item>categoria CE</item>
        <item>categoria D</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="main_select_img_message">Selecteaza o imagine</string>
    <string name="main_img_not_selected">Nu ai ales nicio imagine</string>
    <string name="main_img_somethin_went_wrong">A intervenit ceva</string>
    <string name="form_data_not_available">Data is not available</string>
    <string name="form_btn_update_text">Update</string>
    <string name="quiz_no_answer_selected">Nu ati ales niciun raspuns</string>
    <string name="quiz_correct_answer">Corect</string>
    <string name="quiz_category">Categoria:</string>
    <string name="ask_add_rating_label">Adauga rating pentru aplicatia Driver-inneed</string>
    <string name="quiz_tv_question_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="quiz_btn_check">Check</string>
    <string name="quiz_rb_dummy">RadioButtonDummy</string>
    <string name="quiz_tv_category">Categoria</string>
    <string name="faq_no_data">Nu exista date</string>
    <string name="log_tag"><![CDATA[>> RTDB]]></string>
    <string name="form_log_something_went_wrong">Ceva nu a mers ok</string>
    <string name="form_log_update_done">S-a facut update</string>
    <string name="registre_account_created">Cont creat</string>
    <string name="ask_no_rating">Rating-ul nu poate fi 0</string>
    <string name="quiz_incorrect">Nu este corect</string>
    <string name="faq_not_available">n/a</string>
    <string name="nav_see_map">See maps</string>
    <string name="form_date_error">Data trebuie completata</string>

</resources>
