<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_questions"/>
        <item
            android:id="@+id/nav_form"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/form_students_menu"/>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_faq"/>
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/menu_delete"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="See maps"
            />
    </group>

</menu>
