<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="131dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/quiz_tv_question_dummy"
        app:layout_constraintBottom_toTopOf="@+id/quiz_rg_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_tv_category" />

    <Button
        android:id="@+id/quiz_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="80dp"
        android:text="@string/quiz_btn_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="276dp"
        android:layout_marginRight="47dp" />

    <RadioGroup
        android:id="@+id/quiz_rg_answers"
        android:layout_width="257dp"
        android:layout_height="132dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="365dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="335dp">

        <RadioButton
            android:id="@+id/quiz_rb_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_rb_dummy" />

        <RadioButton
            android:id="@+id/quiz_rb_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_rb_dummy" />

        <RadioButton
            android:id="@+id/quiz_rb_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_rb_dummy" />

        <RadioButton
            android:id="@+id/quiz_rb_fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_rb_dummy" />
    </RadioGroup>

    <TextView
        android:id="@+id/quiz_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="28dp"
        android:text="@string/quiz_tv_category"
        app:layout_constraintBottom_toTopOf="@+id/quiz_tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>