<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AskActivity">

    <TextView
        android:id="@+id/ask_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ask_tv_category"
        app:layout_constraintEnd_toStartOf="@+id/ask_spinner_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/ask_tv_rating_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="69dp"
        android:text="@string/ask_add_rating_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_spinner_categories"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="69dp" />

    <Spinner
        android:id="@+id/ask_spinner_categories"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ask_tv_category"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/ask_button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="161dp"
        android:text="@string/ask_button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_tv_rating_app"
        android:layout_marginLeft="162dp"
        android:layout_marginRight="161dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ask_et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ask_ti_question" />
    </com.google.android.material.textfield.TextInputLayout>

    <NumberPicker
        android:id="@+id/ask_np_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toTopOf="@+id/ask_button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_tv_rating_app"
        android:layout_marginLeft="173dp"
        android:layout_marginRight="174dp" />

</androidx.constraintlayout.widget.ConstraintLayout>